python-compiler/tests/snapshots/lib__complex_control_flow__countdown_with_print.snap
---
source: tests/complex_control_flow.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i64 @countdown(i64 %0) local_unnamed_addr #0 {
entry:
  %check_qnan64 = and i64 %0, 9221120237041090560
  %is_float.not.not65 = icmp eq i64 %check_qnan64, 9221120237041090560
  %i64_to_f6466 = bitcast i64 %0 to double
  %extract_payload67 = and i64 %0, 281474976710655
  %is_negative.not68 = icmp ult i64 %extract_payload67, 140737488355328
  %masksel69 = select i1 %is_negative.not68, i64 0, i64 -281474976710656
  %signed_payload70 = or disjoint i64 %masksel69, %extract_payload67
  %payload_to_f6471 = sitofp i64 %signed_payload70 to double
  %final_payload72 = select i1 %is_float.not.not65, double %payload_to_f6471, double %i64_to_f6466
  %cmptmp73 = fcmp ogt double %final_payload72, 0.000000e+00
  br i1 %cmptmp73, label %loop_body, label %loop_exit

loop_body:                                        ; preds = %entry, %print_end
  %final_payload77 = phi double [ %final_payload, %print_end ], [ %final_payload72, %entry ]
  %extract_payload76 = phi i64 [ %extract_payload, %print_end ], [ %extract_payload67, %entry ]
  %is_float.not.not75 = phi i1 [ %is_float.not.not, %print_end ], [ %is_float.not.not65, %entry ]
  %n.074 = phi i64 [ %pyobject, %print_end ], [ %0, %entry ]
  %tag_bits = lshr i64 %n.074, 48
  %tag = and i64 %tag_bits, 7
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %1 = trunc i64 %tag_bits to i3
  %2 = select i1 %is_bool, i3 2, i3 %1
  %3 = select i1 %is_string, i3 3, i3 %2
  %4 = select i1 %is_list, i3 -4, i3 %3
  %trunc = select i1 %is_float.not.not75, i3 %4, i3 1
  switch i3 %trunc, label %print_float [
    i3 3, label %print_string
    i3 0, label %print_int
  ]

loop_exit:                                        ; preds = %print_end, %entry
  ret i64 9221120237041090560

print_int:                                        ; preds = %loop_body
  %to_int = fptosi double %final_payload77 to i64
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %loop_body
  %printf_float = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string, double %final_payload77)
  br label %print_end

print_string:                                     ; preds = %loop_body
  %payload_to_ptr = inttoptr i64 %extract_payload76 to ptr
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  %subtmp = fadd double %final_payload77, -1.000000e+00
  %float_to_i64 = bitcast double %subtmp to i64
  %payload_to_i64 = fptosi double %subtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %pyobject = select i1 %is_float.not.not75, i64 %nanboxed, i64 %float_to_i64
  %check_qnan = and i64 %pyobject, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %pyobject to double
  %extract_payload = and i64 %pyobject, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %cmptmp = fcmp ogt double %final_payload, 0.000000e+00
  br i1 %cmptmp, label %loop_body, label %loop_exit
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %calltmp = tail call i64 @countdown(i64 9221120237041090565)
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
