python-compiler/tests/snapshots/lib__complex_control_flow__factorial_recursive.snap
---
source: tests/complex_control_flow.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: nofree nosync nounwind memory(none)
define i64 @factorial(i64 %0) local_unnamed_addr #0 {
entry:
  %check_qnan = and i64 %0, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %0 to double
  %extract_payload = and i64 %0, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %cmptmp = fcmp ugt double %final_payload, 1.000000e+00
  br i1 %cmptmp, label %ifcont, label %common.ret

common.ret:                                       ; preds = %entry, %ifcont
  %common.ret.op = phi i64 [ %pyobject120, %ifcont ], [ 9221120237041090561, %entry ]
  ret i64 %common.ret.op

ifcont:                                           ; preds = %entry
  %subtmp = fadd double %final_payload, -1.000000e+00
  %float_to_i64 = bitcast double %subtmp to i64
  %payload_to_i64 = fptosi double %subtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %pyobject = select i1 %is_float.not.not, i64 %nanboxed, i64 %float_to_i64
  %calltmp = tail call i64 @factorial(i64 %pyobject)
  %check_qnan51 = and i64 %calltmp, 9221120237041090560
  %is_float52.not.not = icmp eq i64 %check_qnan51, 9221120237041090560
  %i64_to_f6496 = bitcast i64 %calltmp to double
  %extract_payload97 = and i64 %calltmp, 281474976710655
  %is_negative99.not = icmp ult i64 %extract_payload97, 140737488355328
  %masksel123 = select i1 %is_negative99.not, i64 0, i64 -281474976710656
  %signed_payload101 = or disjoint i64 %masksel123, %extract_payload97
  %payload_to_f64102 = sitofp i64 %signed_payload101 to double
  %final_payload103 = select i1 %is_float52.not.not, double %payload_to_f64102, double %i64_to_f6496
  %1 = and i64 %check_qnan, %calltmp
  %result_is_float105.not = icmp eq i64 %1, 9221120237041090560
  %multmp = fmul double %final_payload, %final_payload103
  %float_to_i64108 = bitcast double %multmp to i64
  %payload_to_i64115 = fptosi double %multmp to i64
  %payload_masked116 = and i64 %payload_to_i64115, 281474976710655
  %nanboxed119 = or disjoint i64 %payload_masked116, 9221120237041090560
  %pyobject120 = select i1 %result_is_float105.not, i64 %nanboxed119, i64 %float_to_i64108
  br label %common.ret
}

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #1 {
entry:
  %calltmp = tail call i64 @factorial(i64 9221120237041090565)
  %check_qnan = and i64 %calltmp, 9221120237041090560
  %is_float.not = icmp eq i64 %check_qnan, 9221120237041090560
  %tag_bits = lshr i64 %calltmp, 48
  %tag = and i64 %tag_bits, 7
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %0 = trunc i64 %tag_bits to i3
  %1 = select i1 %is_bool, i3 2, i3 %0
  %2 = select i1 %is_string, i3 3, i3 %1
  %3 = select i1 %is_list, i3 -4, i3 %2
  %i64_to_f64 = bitcast i64 %calltmp to double
  %extract_payload = and i64 %calltmp, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not, double %payload_to_f64, double %i64_to_f64
  %trunc = select i1 %is_float.not, i3 %3, i3 1
  switch i3 %trunc, label %print_float [
    i3 3, label %print_string
    i3 0, label %print_int
  ]

print_int:                                        ; preds = %entry
  %to_int = fptosi double %final_payload to i64
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %entry
  %printf_float = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string, double %final_payload)
  br label %print_end

print_string:                                     ; preds = %entry
  %payload_to_ptr = inttoptr i64 %extract_payload to ptr
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #1

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #1

attributes #0 = { nofree nosync nounwind memory(none) }
attributes #1 = { nofree nounwind }
