python-compiler/tests/snapshots/lib__complex_control_flow__loop_with_early_condition.snap
---
source: tests/complex_control_flow.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  br label %loop_body

loop_body:                                        ; preds = %entry, %loop_body
  %final_payload83 = phi double [ 0.000000e+00, %entry ], [ %payload_to_f64, %loop_body ]
  %i.082 = phi i64 [ 0, %entry ], [ %payload_masked, %loop_body ]
  %found.081 = phi i64 [ 9221120237041090560, %entry ], [ %found.1, %loop_body ]
  %cmptmp23 = fcmp oeq double %final_payload83, 4.200000e+01
  %found.1 = select i1 %cmptmp23, i64 9221120237041090561, i64 %found.081
  %extract_payload43 = select i1 %cmptmp23, i64 100, i64 %i.082
  %is_negative45.not = icmp ult i64 %extract_payload43, 140737488355328
  %masksel80 = select i1 %is_negative45.not, i64 0, i64 -281474976710656
  %signed_payload47 = or disjoint i64 %masksel80, %extract_payload43
  %payload_to_f6448 = sitofp i64 %signed_payload47 to double
  %addtmp = fadd double %payload_to_f6448, 1.000000e+00
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %is_negative.not = icmp ult i64 %payload_masked, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %payload_masked
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %cmptmp = icmp slt i64 %signed_payload, 100
  br i1 %cmptmp, label %loop_body, label %print_int

print_int:                                        ; preds = %loop_body
  %extract_payload68 = and i64 %found.1, 281474976710655
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 %extract_payload68)
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
